Use erlef/setup-elixir instead of actions/setup-elixir

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - uses: actions/cache@v2
 
@@ -16,7 +16,7 @@ jobs:
 
           path: _build
 
-      - uses: actions/setup-elixir@v1
+      - uses: erlef/setup-elixir@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - uses: actions/cache@v2
 
@@ -46,7 +46,7 @@ jobs:
 
           path: _build
 
-      - uses: actions/setup-elixir@v1
+      - uses: erlef/setup-elixir@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
