--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
 
           path: _build
 
-      - uses: erlef/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
@@ -31,7 +31,7 @@ jobs:
       matrix:
         elixir: [1.11.x, 1.12.x, 1.13.x]
 
-        otp: [22.x, 23.x, 24.x]
+        otp: [22.x, 23.x, 24.x, 25.x]
 
   test:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
 
           path: _build
 
-      - uses: erlef/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
 
         with:
           elixir-version: ${{ matrix.elixir }}
@@ -61,4 +61,4 @@ jobs:
       matrix:
         elixir: [1.11.x, 1.12.x, 1.13.x]
 
-        otp: [22.x, 23.x, 24.x]
+        otp: [22.x, 23.x, 24.x, 25.x]
