--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,16 +7,16 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4.2.1
 
-            - uses: actions/cache@v2
+            - uses: actions/cache@v4.1.1
 
               with:
                   key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
 
                   path: _build
 
-            - uses: erlef/setup-elixir@v1
+            - uses: erlef/setup-beam@v1.18.2
 
               with:
                   elixir-version: ${{ matrix.elixir }}
@@ -57,16 +57,16 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4.2.1
 
-            - uses: actions/cache@v2
+            - uses: actions/cache@v4.1.1
 
               with:
                   key: ${{ github.job }}-${{ matrix.elixir }}-${{ matrix.otp }}-${{ hashFiles('mix.lock') }}-1
 
                   path: _build
 
-            - uses: erlef/setup-elixir@v1
+            - uses: erlef/setup-beam@v1.18.2
 
               with:
                   elixir-version: ${{ matrix.elixir }}
