--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,13 +1,16 @@
 version: 2
 
 updates:
-  - package-ecosystem: mix
+    - package-ecosystem: github-actions
+      directory: "/"
+      schedule:
+          interval: daily
+      open-pull-requests-limit: 10
+      target-branch: main
 
-    directory: "/"
-
-    schedule:
-      interval: daily
-
-    open-pull-requests-limit: 10
-
-    target-branch: master
+    - package-ecosystem: mix
+      directory: "/"
+      schedule:
+          interval: daily
+      open-pull-requests-limit: 10
+      target-branch: main
