--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,28 +1,20 @@
 name: ci
-
 on: push
-
 jobs:
     dialyzer:
         runs-on: ubuntu-latest
-
         steps:
             - uses: actions/checkout@v4.2.2
 
             - id: beam
-
               uses: erlef/setup-beam@v1.18.2
-
               with:
                   elixir-version: ${{ matrix.elixir }}
-
                   otp-version: ${{ matrix.otp }}
 
             - uses: actions/cache@v4.2.2
-
               with:
                   key: ${{ github.job }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-${{ hashFiles('mix.lock') }}-1
-
                   path: _build
 
             - run: mix deps.get
@@ -32,6 +24,7 @@ jobs:
         strategy:
             matrix:
                 elixir:
+                    - 1.18.x
                     - 1.17.x
                     - 1.16.x
                     - 1.15.x
@@ -44,15 +37,15 @@ jobs:
 
                 exclude:
                     - elixir: 1.15.x
-
                       otp: 27.x
 
                     - elixir: 1.16.x
-
                       otp: 27.x
 
                     - elixir: 1.17.x
+                      otp: 24.x
 
+                    - elixir: 1.18.x
                       otp: 24.x
 
     test:
@@ -62,19 +55,14 @@ jobs:
             - uses: actions/checkout@v4.2.2
 
             - id: beam
-
               uses: erlef/setup-beam@v1.18.2
-
               with:
                   elixir-version: ${{ matrix.elixir }}
-
                   otp-version: ${{ matrix.otp }}
 
             - uses: actions/cache@v4.2.2
-
               with:
                   key: ${{ github.job }}-${{ steps.beam.outputs.elixir-version }}-${{ steps.beam.outputs.otp-version }}-${{ hashFiles('mix.lock') }}-1
-
                   path: _build
 
             - run: mix deps.get
@@ -84,6 +72,7 @@ jobs:
         strategy:
             matrix:
                 elixir:
+                    - 1.18.x
                     - 1.17.x
                     - 1.16.x
                     - 1.15.x
@@ -96,13 +85,13 @@ jobs:
 
                 exclude:
                     - elixir: 1.15.x
-
                       otp: 27.x
 
                     - elixir: 1.16.x
-
                       otp: 27.x
 
                     - elixir: 1.17.x
+                      otp: 24.x
 
+                    - elixir: 1.18.x
                       otp: 24.x
